# TradingAgents

./: .env.example  .gitignore  README.md  pyproject.toml  run_day_trader_bot.py
cli/: main.py  utils.py
configs/: local_ollama_config.example.py
docs/: agent_learning_loop.md  autonomous_day_trader.md  codex_ceo_company.md  day_trader_managed_agent_cookbook.md  expansion_plan.md  live_data_architecture.md  local_first_compute_policy.md  research_department.md  setup_local_ollama_and_paper.md
knowledge/: claude_financial_services_repo_analysis_2026.md  day_trader_ai_research_program_2026.md  day_trading_stock_selection_and_premarket_research_2026.md  day_trading_volatility_research.md  dotcom_bubble_ai_market_strategy_review_2026.md  famous_day_trader_playbook_backtests_2026.md  financial_ai_technology_scouting.md  github_repository_research.md  trading_strategy_deep_dive_2026.md
notebooks/: day_trading_strategy_evidence.ipynb
scripts/: backtest_day_trading_strategies.py  check_live_data_stack.py  check_research_assets.py  day_trader_live_tracker.py  demo_msft_snapshot.py  request_day_trader_stop.py  research_famous_day_trader_backtests.py  run_agent_live.ps1  run_agent_with_live_console.py  run_autonomous_ceo.py  run_autonomous_day_trader.py  run_codex_ceo_company.py  run_post_market_review.py  tradingview_webhook_receiver.py
tests/: conftest.py  test_agent_learning.py  test_alpaca_paper.py  test_alpaca_realtime.py  test_autonomous_ceo.py  test_autonomous_discovery.py  test_backtest_lab.py  test_codex_ceo_company.py  test_compute_policy.py  test_memory_log.py  (+6 more)
(+78 files in other folders)
