[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tradingagents"
version = "0.2.4"
description = "TradingAgents: Multi-Agents LLM Financial Trading Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core>=0.2.0",
    "backtrader>=1.9.78.123",
    "langchain-anthropic>=0.3.0",
    "langchain-experimental>=0.3.0",
    "langchain-google-genai>=1.0.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.4.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "pandas>=2.0.0",
    "parsel>=1.8.0",
    "pytz>=2024.1",
    "python-dotenv>=1.0.0",
    "questionary>=2.1.0",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "setuptools>=65.0.0",
    "stockstats>=0.6.0",
    "tqdm>=4.65.0",
    "typing-extensions>=4.0.0",
    "yfinance>=0.2.30",
]

[project.scripts]
tradingagents = "cli.main:app"

[tool.setuptools.packages.find]
include = ["tradingagents*", "cli*"]

[tool.setuptools.package-data]
cli = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: fast isolated unit tests",
    "integration: tests requiring external services",
    "smoke: quick sanity-check tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
